# zakops-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
audit/: api-inventory.md  current-schema.md  data-access-inventory.md  event-system-audit.md  migration-inventory.json  migration-results.json  migration-validation.md  storage-audit.md
audit/phase-reports/: phase-03-outbox-inbox.md  phase-04-artifact-storage.md  phase-05-api-stabilization.md  phase-07-authentication.md  phase-8.5-spec-compliance.md
db/: migrate.py  migrate_data.py
db/migrations/: 001_foundation_tables.sql  001_foundation_tables_rollback.sql  016_5_reliability_patches.sql
docs/: deployment-runbook.md  phase-8-completion-report.md  rollback-procedure.md  security-checklist.md
infra/docker/: Dockerfile  Dockerfile.api  docker-compose.postgres.yml  docker-compose.production.yml  docker-compose.yml
infra/production/: .env.production
scripts/: dev.sh  export_openapi.py  generate_types.py  setup.sh  test.sh  verify_spec_compliance.py
scripts/migration/: inventory.py  migrate_artifacts.py  migrate_deals.py  run_migration.py  validate_migration.py
shared/openapi/: zakops-api.json
src/actions/: __init__.py  planner.py
src/core/: __init__.py  chat_benchmark.py  chat_budget.py  chat_cache.py  chat_evidence_builder.py  chat_llm_provider.py  chat_llm_router.py  chat_orchestrator.py  chat_smoke_test.py  chat_timing.py  deal_registry.py
src/workers/: actions_runner.py
tests/contract/: __init__.py  conftest.py  test_contract_compliance.py  test_sse_contract.py
(+148 files in other folders)
